# deepfield-pypkg

./: README.md  cookiecutter.json
{{cookiecutter.package_slug}}/: README.md  setup.cfg  setup.py
{{cookiecutter.package_slug}}/tests/: test_example.py
{{cookiecutter.package_slug}}/{{cookiecutter.package_module}}/: example.py
