[metadata]
name = {{ cookiecutter.package_slug }}
version = {{ cookiecutter.package_version }}
url = https://github.com/deepfield/libs/{{ cookiecutter.package_slug }}
author = Nokia Deepfield
author_email = support@deepfield.net
description = {{ cookiecutter.package_description }}
long_description = file: README.md
long_description_content_type = text/markdown
license = Proprietary
classifiers =
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.8
packages = find:

include_package_data = true
zip_safe = false
install_requires =
    requests == 2.26.0  # for example; change to your requirements

[options.extras_require]
test =
    pytest == 6.2.5

[options.packages.find]
where = {{ cookiecutter.package_module }}
exclude = tests
